<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/colorSwatch"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_alignParentStart="true"
        android:height="200dp"
        android:background="#000" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/red"
        android:id="@+id/red"
        android:labelFor="@+id/redSB"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/redSB" />

    <SeekBar
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:id="@+id/redSB"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true"
        android:max="255"
        android:layout_marginBottom="15dp" />
    <!--TODO: TextView for blue -->
    <!--TODO: SeekBar for green -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/green"
        android:id="@+id/green"
        android:labelFor="@+id/greenSB"
        android:layout_below="@+id/redSB"
        android:layout_alignParentStart="true" />
    <SeekBar
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:id="@+id/greenSB"
        android:max="255"
        android:layout_below="@+id/green"
        android:layout_alignParentStart="true" />



    <!--TODO: TextView for blue -->
    <!--TODO: SeekBar for blue -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/blue"
        android:id="@+id/blue"
        android:labelFor="@+id/blueSB"
        android:layout_marginTop="17dp"
        android:layout_below="@+id/greenSB"
        android:layout_alignParentStart="true" />
    <SeekBar
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:id="@+id/blueSB"
        android:max="255"
        android:layout_below="@+id/blue"
        android:layout_alignParentStart="true" />

    <!--TODO: TextView for alpha -->
    <!--TODO: SeekBar for alpha -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/alpha"
        android:id="@+id/alpha"
        android:labelFor="@+id/alphaSB"
        android:layout_marginTop="17dp"
        android:layout_below="@+id/blueSB"
        android:layout_alignParentStart="true" />
    <SeekBar
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:id="@+id/alphaSB"
        android:max="255"
        android:layout_below="@+id/alpha"
        android:layout_alignParentStart="true" />
</RelativeLayout>
